force-app/main/default/objects/Order/fields/Credit_Check_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Status__c</fullName>
    <label>Credit Check Status</label>
    <type>Picklist</type>
    <description>Credit Check Status</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Override</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>