force-app/main/default/objects/Order/fields/Delivered_On__c.field-meta.xml
<CustomField>
    <fullName>Delivered_On__c</fullName>
    <label>Delivered On</label>
    <type>Date</type>
    <description>Delivered On</description>
</CustomField>