force-app/main/default/objects/Order/fields/Followup_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Followup_Task_Created__c</fullName>
    <label>Followup Task Created</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Followup Task Created</description>
</CustomField>