force-app/main/default/objects/Order/fields/Order_Priority__c.field-meta.xml
<CustomField>
    <fullName>Order_Priority__c</fullName>
    <label>Order Priority</label>
    <type>Picklist</type>
    <description>Order Priority</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Rush</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>