force-app/main/default/objects/Order/fields/Outlet__c.field-meta.xml
<CustomField>
    <fullName>Outlet__c</fullName>
    <label>Outlet</label>
    <type>Lookup</type>
    <referenceTo>Outlet__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Outlet_Orders</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Outlet</description>
</CustomField>