force-app/main/default/objects/Order/fields/Submission_Status__c.field-meta.xml
<CustomField>
    <fullName>Submission_Status__c</fullName>
    <label>Submission Status</label>
    <type>Picklist</type>
    <description>Submission Status</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Priced</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Fulfilled</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>